feat: implement fire event clustering, severity scoring, and DTO for frontend